<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2022 The Evolution X Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.evolution.oplus.OPlusExtras"
 	android.title="@string/kcal_settings_title">

    <PreferenceCategory
        android:key="kcal_values"
        android:title="@string/kcal_settings">

        <org.evolution.oplus.OPlusExtras.preferences.RedPreference
            android:key="red"
            android:title="@string/red_title" />

        <org.evolution.oplus.OPlusExtras.preferences.GreenPreference
            android:key="green"
            android:title="@string/green_title" />

        <org.evolution.oplus.OPlusExtras.preferences.BluePreference
            android:key="blue"
            android:title="@string/blue_title" />

        <org.evolution.oplus.OPlusExtras.preferences.SaturationPreference
            android:key="saturation"
            android:title="@string/saturation_title" />

        <org.evolution.oplus.OPlusExtras.preferences.HuePreference
            android:key="hue"
            android:title="@string/hue_title" />

        <org.evolution.oplus.OPlusExtras.preferences.ValuePreference
            android:key="value"
            android:title="@string/value_title" />

        <org.evolution.oplus.OPlusExtras.preferences.ContrastPreference
            android:key="contrast"
            android:title="@string/contrast_title" />
    </PreferenceCategory>
</PreferenceScreen>

